Issue #7770 Fixes for issues found within QA testing for colour coded classes charts
This  fixes three issue found during QA test. solved inconsistent
indexing of colour classification in color class modal, fixes the
sometimes invisible separation line on pie charts, and the blinking
scroll bar on the modal

--- a/web/client/themes/default/less/modal.less
+++ b/web/client/themes/default/less/modal.less
@@ -189,7 +189,9 @@
                     padding: 9px;
                 }
             }
-
+            & > div.chart-color-class-modal-body {
+                scrollbar-gutter: stable;
+            }
             .ms-alert {
                 margin: 0;
                 flex: 1;
